<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/navhome"
            android:title="@string/home" />

        <item
            android:id="@+id/nav_cycle"
            android:icon="@drawable/navcycle"
            android:title="@string/cycling" />

        <item
            android:id="@+id/nav_bus"
            android:icon="@drawable/navbus"
            android:title="@string/bus" />

        <item
            android:id="@+id/nav_plane"
            android:icon="@drawable/navplane"
            android:title="@string/aeroplane" />

    </group>

    <item android:title="@string/profile">

        <menu>

            <group android:checkableBehavior="single">

                <item
                    android:id="@+id/nav_login"
                    android:icon="@drawable/navlogin"
                    android:title="@string/login" />

                <item
                    android:id="@+id/nav_profile"
                    android:icon="@drawable/navuser"
                    android:title="@string/profile" />

                <item
                    android:id="@+id/nav_logout"
                    android:icon="@drawable/navlogout"
                    android:title="@string/logout" />

            </group>

        </menu>

    </item>

    <item android:title="@string/communicate">

        <menu>

            <group android:checkableBehavior="single">

                <item
                    android:id="@+id/nav_share"
                    android:icon="@drawable/navshare"
                    android:title="@string/share" />

                <item
                    android:id="@+id/nav_rate"
                    android:icon="@drawable/navrate"
                    android:title="@string/rate" />

            </group>

        </menu>

    </item>

</menu>