<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activities.DashBoardActivity"
    android:id="@+id/layout_drawer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    tools:openDrawer="start"
    android:background="@color/colorBackground"
    >

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/main_menu"
        android:layout_gravity="start"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:elevation="4dp"
                tools:targetApi="lollipop"
                app:contentInsetLeft="0dp"
                app:contentInsetStart="0dp"
                app:titleMarginStart="0dp"
                app:contentInsetStartWithNavigation="0dp"
                android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="0.5"
                    android:orientation="vertical"
                    android:padding="20dp">

                    <TextView
                        android:id="@+id/tv_traveling"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/baloo"
                        android:includeFontPadding="false"
                        android:padding="2dp"
                        android:text="@string/traveling"
                        android:textColor="@color/colorBlack"
                        android:textSize="30sp"
                        tools:targetApi="jelly_bean" />

                    <TextView
                        android:id="@+id/tv_start"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/aclonica"
                        android:includeFontPadding="false"
                        android:padding="4dp"
                        android:text="@string/start_a_new_journey"
                        android:textColor="@color/colorBlack"
                        android:textSize="14sp"
                        tools:targetApi="jelly_bean" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:gravity="center"
                    android:padding="20dp">

                    <ImageView
                        android:id="@+id/iv_cycle"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_gravity="center"
                        android:contentDescription="@string/traveling"
                        android:src="@drawable/cycle" />

                </LinearLayout>

            </LinearLayout>

            <!--Linear One End-->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp">

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="0dp"
                    android:layout_height="130dp"
                    android:layout_margin="8dp"
                    android:layout_weight="1"
                    app:cardCornerRadius="20dp"
                    app:cardElevation="8dp"
                    app:strokeColor="@color/colorBlack"
                    app:strokeWidth="2dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:orientation="vertical"
                        tools:ignore="UseCompoundDrawables">

                        <ImageView
                            android:id="@+id/iv_walk"
                            android:layout_width="70dp"
                            android:layout_height="70dp"
                            android:layout_gravity="center"
                            android:contentDescription="@string/traveling"
                            android:src="@drawable/walking" />

                        <TextView
                            android:id="@+id/tv_walk"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:fontFamily="@font/aclonica"
                            android:includeFontPadding="false"
                            android:padding="4dp"
                            android:text="@string/walking"
                            android:textColor="@color/colorBlack"
                            android:textSize="20sp"
                            tools:targetApi="jelly_bean" />

                    </LinearLayout>

                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="0dp"
                    android:layout_height="130dp"
                    android:layout_margin="8dp"
                    android:layout_weight="1"
                    app:cardCornerRadius="20dp"
                    app:cardElevation="8dp"
                    app:strokeColor="@color/colorBlack"
                    app:strokeWidth="2dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:orientation="vertical"
                        tools:ignore="UseCompoundDrawables">

                        <ImageView
                            android:id="@+id/iv_boat"
                            android:layout_width="70dp"
                            android:layout_height="70dp"
                            android:layout_gravity="center"
                            android:contentDescription="@string/traveling"
                            android:src="@drawable/boat" />

                        <TextView
                            android:id="@+id/tv_boat"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:fontFamily="@font/aclonica"
                            android:includeFontPadding="false"
                            android:padding="4dp"
                            android:text="@string/boating"
                            android:textColor="@color/colorBlack"
                            android:textSize="20sp"
                            tools:targetApi="jelly_bean" />

                    </LinearLayout>

                </com.google.android.material.card.MaterialCardView>

            </LinearLayout>

            <!--Linear Two End-->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp">

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="0dp"
                    android:layout_height="130dp"
                    android:layout_margin="8dp"
                    android:layout_weight="1"
                    app:cardCornerRadius="20dp"
                    app:cardElevation="8dp"
                    app:strokeColor="@color/colorBlack"
                    app:strokeWidth="2dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:orientation="vertical"
                        tools:ignore="UseCompoundDrawables">

                        <ImageView
                            android:id="@+id/iv_bus"
                            android:layout_width="70dp"
                            android:layout_height="70dp"
                            android:layout_gravity="center"
                            android:contentDescription="@string/traveling"
                            android:src="@drawable/bus" />

                        <TextView
                            android:id="@+id/tv_bus"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:fontFamily="@font/aclonica"
                            android:includeFontPadding="false"
                            android:padding="4dp"
                            android:text="@string/bus"
                            android:textColor="@color/colorBlack"
                            android:textSize="20sp"
                            tools:targetApi="jelly_bean" />

                    </LinearLayout>

                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="0dp"
                    android:layout_height="130dp"
                    android:layout_margin="8dp"
                    android:layout_weight="1"
                    app:cardCornerRadius="20dp"
                    app:cardElevation="8dp"
                    app:strokeColor="@color/colorBlack"
                    app:strokeWidth="2dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:orientation="vertical"
                        tools:ignore="UseCompoundDrawables">

                        <ImageView
                            android:id="@+id/iv_train"
                            android:layout_width="70dp"
                            android:layout_height="70dp"
                            android:layout_gravity="center"
                            android:contentDescription="@string/traveling"
                            android:src="@drawable/train" />

                        <TextView
                            android:id="@+id/tv_train"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:fontFamily="@font/aclonica"
                            android:includeFontPadding="false"
                            android:padding="4dp"
                            android:text="@string/train"
                            android:textColor="@color/colorBlack"
                            android:textSize="20sp"
                            tools:targetApi="jelly_bean" />

                    </LinearLayout>

                </com.google.android.material.card.MaterialCardView>

            </LinearLayout>

            <!--Linear Three End-->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="8dp">

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="0dp"
                    android:layout_height="130dp"
                    android:layout_margin="8dp"
                    android:layout_weight="1"
                    app:cardCornerRadius="20dp"
                    app:cardElevation="8dp"
                    app:strokeColor="@color/colorBlack"
                    app:strokeWidth="2dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:orientation="vertical"
                        tools:ignore="UseCompoundDrawables">

                        <ImageView
                            android:id="@+id/iv_cycling"
                            android:layout_width="70dp"
                            android:layout_height="70dp"
                            android:layout_gravity="center"
                            android:contentDescription="@string/traveling"
                            android:src="@drawable/cycling" />

                        <TextView
                            android:id="@+id/tv_cycling"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:fontFamily="@font/aclonica"
                            android:includeFontPadding="false"
                            android:padding="4dp"
                            android:text="@string/cycling"
                            android:textColor="@color/colorBlack"
                            android:textSize="20sp"
                            tools:targetApi="jelly_bean" />

                    </LinearLayout>

                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="0dp"
                    android:layout_height="130dp"
                    android:layout_margin="8dp"
                    android:layout_weight="1"
                    app:cardCornerRadius="20dp"
                    app:cardElevation="8dp"
                    app:strokeColor="@color/colorBlack"
                    app:strokeWidth="2dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:orientation="vertical"
                        tools:ignore="UseCompoundDrawables">

                        <ImageView
                            android:id="@+id/iv_aeroplane"
                            android:layout_width="70dp"
                            android:layout_height="70dp"
                            android:layout_gravity="center"
                            android:contentDescription="@string/traveling"
                            android:src="@drawable/aeroplane" />

                        <TextView
                            android:id="@+id/tv_aeroplane"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:fontFamily="@font/aclonica"
                            android:includeFontPadding="false"
                            android:padding="4dp"
                            android:text="@string/aeroplane"
                            android:textColor="@color/colorBlack"
                            android:textSize="20sp"
                            tools:targetApi="jelly_bean" />

                    </LinearLayout>

                </com.google.android.material.card.MaterialCardView>

            </LinearLayout>

            <!--Linear Three End-->

        </LinearLayout>

    </ScrollView>

</androidx.drawerlayout.widget.DrawerLayout>